[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Arjun Gandhi <account@arjugandhi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.2.54"
jupyter = "^1.0.0"
coolors = "^0.1.0"
matplotlib = "^3.4.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
